--- a/package.json
+++ b/package.json
@@ -12,5 +12,9 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
     "typescript": "^4.7.3"
+  },
+  "dependencies": {
+    "discord-api-types": "^0.33.3",
+    "discord.js": "^13.7.0"
   }
 }
